--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#topbar {
+    border-bottom: 0px solid transparent;
+    background-image: linear-gradient(to right, transparent 0%, #3b86f6 10%, #3b86f6 90%, transparent 100%);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 100% 2px; /* Border thickness */
+  }
+  
